# src/controllers/article.js
@@ -131,3 +131,20 @@ exports.createComment = catchAsyncErrorHandle(async (req, res, next) => {
     ...response._doc,
   });
 });
+
+exports.deleteComment = catchAsyncErrorHandle(async (req, res, next) => {
+  let articleId = req.params.id;
+  let commentId = req.params.id;
+  const userId = req.user._id;
+  let comment = await ArticleService.deleteCommentById(
+    userId,
+    articleId,
+    commentId
+  );
+  console.log(comment);
+  res.status(200).json({
+    success: true,
+    message: "Delete Comment successfully 🎉",
+    commentId: comment._id,
+  });
+});
